Fix pixel shift on input focus

--- a/assets/css/admin/orders/_refunds-modal.scss
+++ b/assets/css/admin/orders/_refunds-modal.scss
@@ -67,7 +67,8 @@
 			}
 
 			&:focus {
-				border-bottom: 2px solid var(--wp-admin-theme-color-darker-10);
+				border-bottom: 1px solid var(--wp-admin-theme-color-darker-10);
+				box-shadow: 0 1px 0 var(--wp-admin-theme-color-darker-10);
 			}
 		}
 
